package eventos.piura.model;

import jakarta.persistence.*;
import jakarta.validation.constraints.*;
import lombok.*;

@Entity
@Table(name="wal_tx")
@Getter @Setter @NoArgsConstructor
@org.hibernate.annotations.Check(constraints = "(tipo in ('CR','DB')) and (monto_centavos > 0)")
public class WalletTx extends AuditableEntity {
  @ManyToOne(optional=false) @JoinColumn(name="billetera_id")
  private Billetera billetera;

  @Column(length=10, nullable=false) private String tipo; // CR/DB
  @NotBlank @Size(max=40) @Column(nullable=false, length=40)
  private String concepto; 

  @Positive @Column(name="monto_centavos", nullable=false)
  private Integer montoCentavos;

  @Column(columnDefinition="jsonb", nullable=false) private String referencia = "{}";
}
