@startuml
title Diagrama de clases - Backend Eventos

skinparam class {
  BackgroundColor White
  ArrowColor #0f172a
  BorderColor #0f172a
}

class Usuario {
  +uuid id
  +String nombre
  +String apellido
  +String username
  +String correo
  +boolean correoVerificado
  +EstadoUsuario estado
}

class Rol {
  +uuid id
  +String nombre
}

class Permiso {
  +uuid id
  +String nombre
  +String descripcion
}

class Categoria {
  +uuid id
  +String nombre
}

class Evento {
  +uuid id
  +String titulo
  +OffsetDateTime inicioEn
  +OffsetDateTime finEn
  +EstadoEvento estado
}

class TipoEntradaCatalogo {
  +uuid id
  +String nombre
  +boolean activo
}

class EventoEntradaTipo {
  +uuid id
  +String nombreVisible
  +int precioCentavos
  +int cupoTotal
}

class Orden {
  +uuid id
  +int subtotalCentavos
  +int descuentoCentavos
  +int totalCentavos
  +EstadoOrden estado
  +MetodoPago metodoPago
}

class OrdenItem {
  +uuid id
  +int cantidad
  +int precioUnitCentavos
}

class BoletoEntrada {
  +uuid id
  +String codigo
  +String nombreTitular
  +String qrPayload
}

class Billetera {
  +uuid id
}

class WalletTx {
  +uuid id
  +String tipo
  +String concepto
  +int montoCentavos
}

Usuario "1" -- "*" Rol : roles
Rol "1" -- "*" Permiso : permisos
Usuario "1" -- "1" Billetera
Billetera "1" -- "*" WalletTx : movimientos

Usuario "1" -- "*" Evento : organiza
Evento "1" -- "0..*" EventoEntradaTipo : tipos
EventoEntradaTipo "*" -- "1" TipoEntradaCatalogo : usa
Evento "1" -- "0..1" Categoria : categoria

Usuario "1" -- "*" Orden : comprador
Evento "1" -- "*" Orden : origen
Orden "1" -- "*" OrdenItem : items
OrdenItem "*" -- "1" EventoEntradaTipo : tipoEntrada
Orden "1" -- "*" BoletoEntrada : genera
BoletoEntrada "*" -- "1" OrdenItem : detalle

@enduml
